<resources>
    <string name="app_name">dagger-android</string>

    <string name="bottom_nav_item_first">First</string>
    <string name="bottom_nav_item_second">Second</string>
    <string name="bottom_nav_item_third">Third</string>
    <string name="bottom_nav_item_fourth">Fourth</string>

    <string name="login_button_signin">Sign in</string>
    <string name="login_username_edittext_hint">Username</string>
    <string name="login_password_edittext_hint">Password</string>
    <string name="login_error_text">Please try again</string>
    <string name="login_button_signup">Sign up</string>

    <string name="user_id_label">User ID:</string>
    <string name="user_name_label">Name:</string>
    <string name="error_layout_text">Error has occurred</string>
    <string name="error_layout_retry">Retry</string>
</resources>