<?xml version="1.0" encoding="utf-8"?>
<!--
The most simple way to use two-way databinding
is using @={variable} instead @{variable}
-->
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>

        <variable
            name="vm"
            type="com.flamyoad.dagger_android.ui.login.LoginViewModel"
            />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.LoginActivity"
        >

        <EditText
            android:id="@+id/login_username_edittext"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginBottom="84dp"
            android:ems="10"
            android:hint="@string/login_username_edittext_hint"
            android:inputType="textPersonName"
            android:text="@={vm.userName}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <EditText
            android:id="@+id/login_password_edittext"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/login_password_edittext_hint"
            android:inputType="textPassword"
            android:text="@={vm.password}"
            app:layout_constraintEnd_toEndOf="@+id/login_username_edittext"
            app:layout_constraintStart_toStartOf="@+id/login_username_edittext"
            app:layout_constraintTop_toBottomOf="@+id/login_username_edittext"
            />

        <Button
            android:id="@+id/login_btn_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:onClick="@{() -> vm.login()}"
            android:text="@string/login_button_signin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_password_edittext"
            />

        <TextView
            android:id="@+id/login_error_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/login_error_text"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_btn_signin"
            tools:visibility="visible"
            />

        <TextView
            android:id="@+id/login_button_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/login_button_signup"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>